added image viewer with imageIO (slow)